Add readme and screeshot

--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -5,5 +5,5 @@
 		{{#if devour}}Devour{{else}}Undevour{{/if}}
 	</button>
 
-	<button class="delete-burger" data-id="{{this.id}}">Delete</button>
+	<button class="delete-burger" data-id="{{this.id}}">Remove</button>
 </li>
